...
                  
                  // Ganti Spacer dengan SizedBox agar aman di dalam ScrollView
                  const SizedBox(height: 30),

                  // --- BAGIAN TEKS SAMBUTAN ---
                  const Text(
                    'Selamat datang di Goosan!',
                    textAlign: TextAlign.center,
                    style: TextStyle(
                      fontSize: 24,
                      fontWeight: FontWeight.bold,
                      color: Colors.black,
                    ),
...
                        backgroundColor: Colors.green,
                        shape: RoundedRectangleBorder(
                          borderRadius: BorderRadius.circular(8),
                        ),
                      ),
                      child: const Text(
                        'Masuk',
                        style: TextStyle(
                          fontSize: 18,
                          color: Colors.white,
                          fontWeight: FontWeight.bold,
                        ),
                      ),
...
