...
              ),

              const SizedBox(height: 32),

              // --- 2. Teks Konfirmasi ---
              const Text(
                'Congratulation',
                style: TextStyle(fontSize: 24, fontWeight: FontWeight.bold),
                textAlign: TextAlign.center,
              ),
              const SizedBox(height: 8),
              const Text(
                'Check your order in activity',
...
